<resources>
    <string name="app_name">TEDxTehran</string>

    <string name="current_event">current event</string>
    <string name="speakers">Speakers</string>
    <string name="networking">Networking</string>
    <string name="gallery">Gallery</string>
    <string name="news">News</string>


    <!-- BottomSheet profile -->
    <string name="edit_profile">Edit Profile</string>
    <string name="my_network">My Network</string>
    <string name="messages">Messages</string>
    <string name="about_us">About Us</string>


    <!-- Content Description ImageView -->

    <string name="content_description">User Profile</string>
    <string name="ic_launcher">Ic launcher</string>
    <string name="speakers_image">Speakers Image</string>
    <string name="banner_image">Banner Image</string>
    <string name="description">Description</string>
    <string name="related">Related</string>
    <string name="try_again">Try Again</string>
    <string name="description_gallery_cover">Gallery Cover</string>
    <string name="description_img_shadow_gallery_cover">shadow Gallery Cover</string>
    <string name="description_img_news_logo">News Logo</string>
    <string name="get_play_video">Get Play Video</string>
    <string name="talk_banner">Talk Banner</string>
    <string name="feature_talk">Feature Talk</string>
    <string name="album_large_image">Album Large Image</string>
    <string name="main_event_banner">Main Event Banner</string>
    <string name="live_event">Live event</string>
    <string name="event_time">Event Time</string>
    <string name="divider">divider</string>
    <string name="map_image">Map Image</string>
    <string name="image_about">Image About</string>
    <string name="back_press">Back Press</string>
    <string name="time_scheduling">Time Scheduling</string>
    <string name="sponsor">Sponsor</string>
    <string name="sponsor_logo">Sponsor Logo</string>
    <string name="empty_state">Sorry, there is no content to display :(</string>


    <!--Networking-->
    <string name="networking_welcome">Welcome to TEDxTehran Networking Section</string>
    <string name="networking_register">enter your phone and wait for code</string>
    <string name="get_code">get verify code</string>
    <string name="phone_number">phone number</string>

    <string name="verify_code">enter verify code</string>
    <string name="register">register</string>
    <string name="authentication">authentication</string>
    <string name="auth_text">wait to receive code</string>

    <string name="profile_tab">Profile</string>
    <string name="chats_tab">Chats</string>

    <!--profile-->
    <string name="job_title">Job</string>
    <string name="universiry">University</string>
    <string name="interested">Interested</string>
    <string name="my_story">My Story</string>
    <string name="full_name">FullName</string>
    <string name="email">email</string>




</resources>
