<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/speakers"
        android:icon="@drawable/ic_speakers"
        android:title="@string/speakers" />

    <item
        android:id="@+id/gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/gallery" />
    <item
        android:id="@+id/latest_event_navigation"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />


    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />


<!--    <item-->
<!--        android:id="@+id/networking"-->
<!--        android:icon="@drawable/ic_networking"-->
<!--        android:title="@string/networking" />-->


</menu>