<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="@dimen/image_gallery_radius">

            <ImageView
                android:id="@+id/imgBanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/main_event_banner"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layoutLiveEvent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:visibility="gone"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/txtTitleLive"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/shabnam_bold"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:text="@string/live_event" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/live_event"
                    android:src="@drawable/ic_baseline_live_tv" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|end"
                        android:orientation="horizontal"
                        android:paddingVertical="8dp">

                        <TextView
                            android:id="@+id/txtTitleTicket"
                            style="@style/SubtitleDark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/event_time"
                            android:padding="8dp"
                            android:src="@drawable/ic_ticket"
                            android:tint="@color/color_gray" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.2"
                        android:background="@color/color_gray"
                        android:contentDescription="@string/divider" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|end"
                        android:orientation="horizontal"
                        android:paddingVertical="8dp">

                        <TextView
                            android:id="@+id/txtTitleRegister"
                            style="@style/SubtitleDark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/event_time"
                            android:padding="8dp"
                            android:src="@drawable/ic_baseline_insert_link"
                            android:tint="@color/color_gray" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha="0.2"
                        android:background="@color/color_gray"
                        android:contentDescription="@string/divider" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <TextView
                        android:id="@+id/txtDateEvent"
                        style="@style/SubtitleDark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:maxLines="2"
                        android:paddingStart="12dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/event_time"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_access_time_24"
                        android:tint="@color/color_gray" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.2"
                    android:background="@color/color_gray"
                    android:contentDescription="@string/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <TextView
                        android:id="@+id/txtLocationEvent"
                        style="@style/SubtitleDark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:maxLines="2"
                        android:paddingStart="12dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/event_time"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_location_on_24"
                        android:tint="@color/color_gray" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.2"
                    android:background="@color/color_gray"
                    android:contentDescription="@string/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <TextView
                        android:id="@+id/txtAddressEvent"
                        style="@style/SubtitleDark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:maxLines="2"
                        android:paddingStart="12dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/event_time"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_directions_24"
                        android:tint="@color/color_gray" />

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="@dimen/image_gallery_radius">

            <ImageView
                android:id="@+id/imgMap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/map_image"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="76dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:id="@+id/layoutSponsor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/shabnam_bold"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:text="@string/sponsor" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>